fix bug remove white space surrounding 4 game boxes by reducing left right padding to 0

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 .container {
   position: relative;
   border: 3px solid green;  
-}
+} 
     
 /* code snippet from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_center-vertical2_btn */
 .center {
@@ -32,9 +32,20 @@ body {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   z-index: 1;
-}
+} 
 
 /* code snippet from https://codeinstitute.com/ Rosie resume tutorial */
+
+#game-box-1, #game-box2, #game-box-3, #game-box-4 {
+    padding: 0;
+}
+
+#game-box-2 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+
 #game-photo-1 {
     background: url("../images/beluga.jpeg");
     background-size: cover;
@@ -44,6 +55,7 @@ body {
     transition: all .5s ease-in-out;
     z-index: -1;
     text-align: center;
+    width: 100%;
 }
 
 #game-photo-2 {
@@ -55,6 +67,8 @@ body {
     transition: all .5s ease-in-out;
     z-index: -1;
     text-align: center;
+    width: 100%;
+    
 }
 
 #game-photo-3 {
@@ -66,7 +80,9 @@ body {
     transition: all .5s ease-in-out;
     z-index: -1;
     text-align: center;
-}
+    width: 100%;
+   
+} 
 
 #game-photo-4 {
     background: url("../images/spermwhale.jpeg");
@@ -77,7 +93,14 @@ body {
     transition: all .5s ease-in-out;
     z-index: -1;
     text-align: center;
+    width: 100%;
+ 
 }
 
+.btn {
+    border: 10px solid yellow;
+     padding-right: 150px;
+    padding-left: 150px;
+}
 
 
